// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/intentDetail can render intent with special characters correctly 1`] = `
<div
  className="mrb-action-panel list-box"
>
  <div
    className="list-content"
  >
    <div
      className="mrb-sublist"
    >
      <div
        className="mrb-subheader"
      >
        <i
          className="mrb-subheader-right material-icons"
          disabled={false}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          keyboard_arrow_up
        </i>
        <div>
          input
        </div>
      </div>
      <div
        style={
          Object {
            "display": "block",
          }
        }
      >
        <ul
          className="mdc-list"
        />
        <li
          className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="menuitem"
          style={
            Object {
              "color": "rgb(0, 0, 0)",
              "height": "auto",
              "minHeight": "40px",
              "padding": "16px",
            }
          }
        >
          <i
            aria-hidden="true"
            className="mdc-list-item__graphic material-icons"
          >
            format_quote
          </i>
          <div
            aria-label="Add an input sentence"
            className="contenteditable"
            id="ae_content"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            spellCheck={false}
            tabIndex={0}
          >
            <span>
              <span
                className={undefined}
                data="text"
                id="ae_start"
                onClick={[Function]}
                onInput={[Function]}
                style={
                  Object {
                    "display": "inline-block",
                    "padding": "0 4px",
                    "width": "100vw",
                  }
                }
                tabIndex={1}
              />
            </span>
          </div>
          <div />
        </li>
      </div>
    </div>
    <hr />
    <div
      className="mrb-sublist"
    >
      <div
        className="mrb-subheader"
      >
        <i
          className="mrb-subheader-right material-icons"
          disabled={false}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          keyboard_arrow_up
        </i>
        <div>
          output
        </div>
      </div>
      <div
        style={
          Object {
            "display": "block",
          }
        }
      >
        <ul
          className="mdc-list"
        />
        <li
          className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="menuitem"
          style={
            Object {
              "color": "rgb(0, 0, 0)",
              "height": "auto",
              "minHeight": "40px",
              "padding": "16px",
            }
          }
        >
          <i
            aria-hidden="true"
            className="mdc-list-item__graphic material-icons"
          >
            chat_bubble_outline
          </i>
          <div>
            <div
              onKeyPress={[Function]}
            >
              <div
                className="mdc-text-field mdc-text-field--upgraded"
                style={
                  Object {
                    "height": "auto",
                    "marginTop": "0px",
                  }
                }
              >
                <input
                  className="mdc-text-field__input"
                  defaultValue={null}
                  id="conditionName"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                  value={undefined}
                />
                <label
                  className="mdc-floating-label"
                  focused="false"
                  htmlFor="conditionName"
                  style={Object {}}
                />
                <div
                  className="mdc-text-field__bottom-line"
                />
              </div>
              =
              <div
                className="mdc-text-field mdc-text-field--upgraded"
                style={
                  Object {
                    "height": "auto",
                    "marginTop": "0px",
                  }
                }
              >
                <input
                  className="mdc-text-field__input"
                  defaultValue={null}
                  id="conditionValue"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                  value={undefined}
                />
                <label
                  className="mdc-floating-label"
                  focused="false"
                  htmlFor="conditionValue"
                  style={Object {}}
                />
                <div
                  className="mdc-text-field__bottom-line"
                />
              </div>
            </div>
            <div
              aria-label="Add an output response"
              className="contenteditable"
              id="ae_content"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              spellCheck={false}
              tabIndex={0}
            >
              <span>
                <span
                  className={undefined}
                  data="text"
                  id="ae_start"
                  onClick={[Function]}
                  onInput={[Function]}
                  style={
                    Object {
                      "display": "inline-block",
                      "padding": "0 4px",
                      "width": "100vw",
                    }
                  }
                  tabIndex={1}
                />
              </span>
            </div>
          </div>
          <div />
        </li>
      </div>
    </div>
    <hr />
    <div
      className="mrb-sublist"
    >
      <div
        className="mrb-subheader"
      >
        <i
          className="mrb-subheader-right material-icons"
          disabled={false}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          keyboard_arrow_down
        </i>
        <div>
          Parameters
        </div>
      </div>
      <div
        style={
          Object {
            "display": "none",
          }
        }
      >
        <ul
          className="mdc-list"
        >
          <li
            className="mdc-list-item"
            onKeyPress={[Function]}
            role="menuitem"
          >
            <i
              aria-hidden="true"
              className="mdc-list-item__graphic material-icons"
            >
              title
            </i>
            Topic
            <span
              className="mdc-list-item__meta"
              onClick={null}
              onKeyUp={[Function]}
              role="button"
              tabIndex="0"
            >
              <button
                className="mrb-action-button mdc-button"
                disabled={false}
                id={null}
                onClick={[Function]}
                type="button"
              >
                
                {{%7B%7Btext%7D%7D}}&lt;&lt;%3C%3Cvar%3E%3E&gt;&gt;
              </button>
            </span>
          </li>
          <li
            className="mdc-list-item"
            onKeyPress={[Function]}
            role="menuitem"
          >
            <i
              aria-hidden="true"
              className="mdc-list-item__graphic material-icons"
            >
              link
            </i>
            Previous
            <span
              className="mdc-list-item__meta"
              onClick={null}
              onKeyUp={[Function]}
              role="button"
              tabIndex="0"
            >
              <button
                className="mrb-action-button mdc-button"
                disabled={false}
                id={null}
                onClick={[Function]}
                type="button"
              >
                
                NONE
              </button>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/intentDetail renders correctly 1`] = `
<div
  className="mrb-action-panel list-box"
>
  <div
    className="list-content"
  >
    <div
      className="mrb-sublist"
    >
      <div
        className="mrb-subheader"
      >
        <i
          className="mrb-subheader-right material-icons"
          disabled={false}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          keyboard_arrow_up
        </i>
        <div>
          input
        </div>
      </div>
      <div
        style={
          Object {
            "display": "block",
          }
        }
      >
        <ul
          className="mdc-list"
        />
        <li
          className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="menuitem"
          style={
            Object {
              "color": "rgb(0, 0, 0)",
              "height": "auto",
              "minHeight": "40px",
              "padding": "16px",
            }
          }
        >
          <i
            aria-hidden="true"
            className="mdc-list-item__graphic material-icons"
          >
            format_quote
          </i>
          <div
            aria-label="Add an input sentence"
            className="contenteditable"
            id="ae_content"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            spellCheck={false}
            tabIndex={0}
          >
            <span>
              <span
                className={undefined}
                data="text"
                id="ae_start"
                onClick={[Function]}
                onInput={[Function]}
                style={
                  Object {
                    "display": "inline-block",
                    "padding": "0 4px",
                    "width": "100vw",
                  }
                }
                tabIndex={1}
              />
            </span>
          </div>
          <div />
        </li>
      </div>
    </div>
    <hr />
    <div
      className="mrb-sublist"
    >
      <div
        className="mrb-subheader"
      >
        <i
          className="mrb-subheader-right material-icons"
          disabled={false}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          keyboard_arrow_up
        </i>
        <div>
          output
        </div>
      </div>
      <div
        style={
          Object {
            "display": "block",
          }
        }
      >
        <ul
          className="mdc-list"
        />
        <li
          className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="menuitem"
          style={
            Object {
              "color": "rgb(0, 0, 0)",
              "height": "auto",
              "minHeight": "40px",
              "padding": "16px",
            }
          }
        >
          <i
            aria-hidden="true"
            className="mdc-list-item__graphic material-icons"
          >
            chat_bubble_outline
          </i>
          <div>
            <div
              onKeyPress={[Function]}
            >
              <div
                className="mdc-text-field mdc-text-field--upgraded"
                style={
                  Object {
                    "height": "auto",
                    "marginTop": "0px",
                  }
                }
              >
                <input
                  className="mdc-text-field__input"
                  defaultValue={null}
                  id="conditionName"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                  value={undefined}
                />
                <label
                  className="mdc-floating-label"
                  focused="false"
                  htmlFor="conditionName"
                  style={Object {}}
                />
                <div
                  className="mdc-text-field__bottom-line"
                />
              </div>
              =
              <div
                className="mdc-text-field mdc-text-field--upgraded"
                style={
                  Object {
                    "height": "auto",
                    "marginTop": "0px",
                  }
                }
              >
                <input
                  className="mdc-text-field__input"
                  defaultValue={null}
                  id="conditionValue"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                  value={undefined}
                />
                <label
                  className="mdc-floating-label"
                  focused="false"
                  htmlFor="conditionValue"
                  style={Object {}}
                />
                <div
                  className="mdc-text-field__bottom-line"
                />
              </div>
            </div>
            <div
              aria-label="Add an output response"
              className="contenteditable"
              id="ae_content"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              spellCheck={false}
              tabIndex={0}
            >
              <span>
                <span
                  className={undefined}
                  data="text"
                  id="ae_start"
                  onClick={[Function]}
                  onInput={[Function]}
                  style={
                    Object {
                      "display": "inline-block",
                      "padding": "0 4px",
                      "width": "100vw",
                    }
                  }
                  tabIndex={1}
                />
              </span>
            </div>
          </div>
          <div />
        </li>
      </div>
    </div>
    <hr />
    <div
      className="mrb-sublist"
    >
      <div
        className="mrb-subheader"
      >
        <i
          className="mrb-subheader-right material-icons"
          disabled={false}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          keyboard_arrow_down
        </i>
        <div>
          Parameters
        </div>
      </div>
      <div
        style={
          Object {
            "display": "none",
          }
        }
      >
        <ul
          className="mdc-list"
        >
          <li
            className="mdc-list-item"
            onKeyPress={[Function]}
            role="menuitem"
          >
            <i
              aria-hidden="true"
              className="mdc-list-item__graphic material-icons"
            >
              title
            </i>
            Topic
            <span
              className="mdc-list-item__meta"
              onClick={null}
              onKeyUp={[Function]}
              role="button"
              tabIndex="0"
            >
              <button
                className="mrb-action-button mdc-button"
                disabled={false}
                id={null}
                onClick={[Function]}
                type="button"
              >
                
                some intent
              </button>
            </span>
          </li>
          <li
            className="mdc-list-item"
            onKeyPress={[Function]}
            role="menuitem"
          >
            <i
              aria-hidden="true"
              className="mdc-list-item__graphic material-icons"
            >
              link
            </i>
            Previous
            <span
              className="mdc-list-item__meta"
              onClick={null}
              onKeyUp={[Function]}
              role="button"
              tabIndex="0"
            >
              <button
                className="mrb-action-button mdc-button"
                disabled={false}
                id={null}
                onClick={[Function]}
                type="button"
              >
                
                NONE
              </button>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
